tests/cel/chainsaw/check-policy-ready/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-policy-is-ready
spec:
  steps:
  - name: check-sync-cert-manager-route53-secret
    use:
      template: ../_steps-templates/generating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: sync-cert-manager-route53-secret

  - name: check-inject-proxy-env
    use:
      template: ../_steps-templates/mutating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: inject-proxy-env

  - name: check-kyverno-policies-connectivity-check-wc-cp-ip
    use:
      template: ../_steps-templates/validating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: kyverno-policies-connectivity-check-wc-cp-ip
